--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -2,24 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main>
-    <div class="container"> 
+  <div class="container">
+    <div class="seccontainer"> 
        <img src="image-qr-code.png" alt="QR Code"> 
        <h3 class="first"> Improve your front-end skills by building projects </h3>
-       <div class="second"> Scann the QR code to visit Frontend Mentor and take your coding skills to the next level </div>
+       <p class="second"> Scann the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
     </div>
-    </main>
-  <footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/ZeinabMZar" target="_blank">Zeinab</a>.
   </div>
-  </footer>
 </body>
 </html>
